	* Solaris 9 testing was carried out. Ldns now compiles on that
	  platform; some gnuism were identified and fixed.
	* The ldns_zone structure was stress tested. The current setup
	 (ie. just a list of rrs) can scale to zone file in order of
	 megabytes. Sorting such zone is still difficult.
	* Reading multiline b64 encoded rdata works.

	Drill:
	* -r was killed in favor of -o <header bit mnemonic> which 
	  allows for a header bits setting (and maybe more in the
	  future)
	* DS was added to the list of records which, when used automaticly
	  enable DNSSEC (i.e. Set the do-bit in the query)
	* Implement a crude RTT check, it now distinguishes between
	  reacheable and unreacheable.
	
	Examples:
	* ldns-dpa was added to the examples - this is the Dns Packet
	  Analyzer tool.
	
	Code:
	* All networking code was moved to net.c
	* rdata.c: added asserts to the rdf set/get functions

	API:
	Changed:
	* ldns_rr_new_frm_str() is extented with an extra variable which
	  in common use may be NULL. This trickles through to:
          o ldns_rr_new_frm_fp
	  o ldns_rr_new_frm_fp_l
	  Which also get an extra variable
	New:
	* ldns_zone_sort: Sort a zone
	* ldns_bgsend(): background send, returns a socket.


18 Oct 2005: 1.0.0: ldns-team
	* Commited a patch from Håkan Olsson
	* Added UPDATE support (Jakob Schlyter and Håkan Olsson)
	* License change: ldns is now BSD licensed
	* ldns now depends on SSL
	* Networking code cleanup, added (some) server udp/tcp support
	* A zone type is introduced. Currently this is a list
	  of RRs, so it will not scale well.
	* [beta] Zonefile parsing was added
	* [tools] Drill was added to ldns - see drill/
	* [tools] experimental signer was added
	* [building] better check for ssl
	* [building] major revision of build system
	* [building] added rpm .spec in packaging/ (thanks to Paul Wouters)
	* [building] A lot of cleanup in the build scripts (thanks to Jakob Schlyter
	and Paul Wouters)

28 Jul 2005: 0.70: ldns-team