@@ -864,6 +864,7 @@ ldns_resolver_send(ldns_pkt **answer, ldns_resolver *r, ldns_rdf *name,
 	         rr instead of seperate values in resolver (and packet)
 	  Jelte
 	*/
+#ifdef HAVE_SSL
 	if (ldns_resolver_tsig_keyname(r) && ldns_resolver_tsig_keydata(r)) {
 		status = ldns_pkt_tsig_sign(query_pkt,
 		                            ldns_resolver_tsig_keyname(r),
@@ -875,6 +876,7 @@ ldns_resolver_send(ldns_pkt **answer, ldns_resolver *r, ldns_rdf *name,
 			return LDNS_STATUS_CRYPTO_TSIG_ERR;
 		}
 	}
+#endif /* HAVE_SSL */
 	status = ldns_resolver_send_pkt(&answer_pkt, r, query_pkt);
 	ldns_pkt_free(query_pkt);
 	
